Perfect knowledge works

--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -319,26 +319,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mBoundsError: attempt to access 5×19 Array{JuMP.Variable,2} at index [6, Base.Slice(Base.OneTo(19))]\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mBoundsError: attempt to access 5×19 Array{JuMP.Variable,2} at index [6, Base.Slice(Base.OneTo(19))]\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1mthrow_boundserror\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Array{JuMP.Variable,2}, ::Tuple{Int64,Base.Slice{Base.OneTo{Int64}}}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\abstractarray.jl:434\u001b[22m\u001b[22m",
-      " [2] \u001b[1mcheckbounds\u001b[22m\u001b[22m at \u001b[1m.\\abstractarray.jl:362\u001b[22m\u001b[22m [inlined]",
-      " [3] \u001b[1mmacro expansion\u001b[22m\u001b[22m at \u001b[1m.\\multidimensional.jl:494\u001b[22m\u001b[22m [inlined]",
-      " [4] \u001b[1m_getindex\u001b[22m\u001b[22m at \u001b[1m.\\multidimensional.jl:491\u001b[22m\u001b[22m [inlined]",
-      " [5] \u001b[1mgetindex\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Array{JuMP.Variable,2}, ::Int64, ::Colon\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\abstractarray.jl:883\u001b[22m\u001b[22m",
-      " [6] \u001b[1mmacro expansion\u001b[22m\u001b[22m at \u001b[1mC:\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\Users\\tao\\AppData\\Local\\JuliaPro-0.6.2.1\\pkgs-0.6.2.1\\v0.6\\JuMP\\src\\macros.jl:422\u001b[22m\u001b[22m [inlined]",
-      " [7] \u001b[1mmacro expansion\u001b[22m\u001b[22m at \u001b[1m.\\In[42]:41\u001b[22m\u001b[22m [inlined]",
-      " [8] \u001b[1manonymous\u001b[22m\u001b[22m at \u001b[1m.\\<missing>:?\u001b[22m\u001b[22m",
-      " [9] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m.\\loading.jl:522\u001b[22m\u001b[22m"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Academic license - for non-commercial use only\n",
+      "Optimal\n",
+      "[-0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -0.0, 0.0, -0.0, 1.0, 0.0, -0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "[-0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1.0, 0.0, 0.0]\n",
+      "[-0.0, -0.0, -0.0, 1.0, -0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0, -0.0, 1.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "[-0.0, -0.0, -0.0, -0.0, -0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, -0.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0]\n",
+      "[-0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, 1.0, 0.0, 0.0, 0.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
      ]
     }
    ],
@@ -346,7 +340,7 @@
     "# Define input data\n",
     "\n",
     "num_tasks = 5\n",
-    "A = [0, 2, 4, 6, 8]\n",
+    "A = [1, 2, 4, 6, 8]\n",
     "D = [3, 6, 4, 5, 2]\n",
     "max_time = 20                 # TO BE SETTLED\n",
     "psi_1 = 0.4\n",
@@ -381,17 +375,15 @@
     "\n",
     "# Expressing Psi\n",
     "for i = 1:max_time-1\n",
-    "    @constraint(m, Psi_y[i,:] .== x[:,i+1] .+ x[:,i])\n",
-    "    \n",
-    "    @constraint(m, Psi_y[i,:] - 1 .<= max_time*Psi_z[i,:] - 0.000001*(1-Psi_z[i,:])) # aTx − b ≤ Mz − ε(1−z)\n",
-    "    \n",
-    "    @constraint(m, Psi_y[i,:] .>= 0.000001*Psi_z[i,:])                             # aTx −b ≥ m(1−z) + εz\n",
-    "    @constraint(m, Psi[i] == 2 - sum(Psi_z[i,:]))\n",
+    "    @constraint(m, Psi_y[:,i] .== x[:,i+1] .+ x[:,i])\n",
+    "    @constraint(m, Psi_y[:,i] - 1 .<= max_time*Psi_z[:,i] - 0.000001*(1-Psi_z[:,i])) # aTx − b ≤ Mz − ε(1−z)\n",
+    "    @constraint(m, Psi_y[:,i] .>= 0.000001*Psi_z[:,i])                               # aTx −b ≥ m(1−z) + εz\n",
+    "    @constraint(m, Psi[i] == 2 - sum(Psi_z[:,i]))\n",
     "end\n",
     "\n",
     "# Expressing W\n",
     "for i = 1:num_tasks\n",
-    "    @constraint (m, W[i] == F[i] - sum(x[i,:])) # Waiting time is the number of zero time slots\n",
+    "    @constraint(m, W[i] == F[i] - sum(x[i,:])) # Waiting time is the number of zero time slots\n",
     "end\n",
     "\n",
     "# Expressing E\n",
@@ -399,12 +391,12 @@
     "    for j = 1:max_time\n",
     "        @constraint(m, E_y[i, j] == sum(x[i,1:j]))\n",
     "    end\n",
+    "    \n",
+    "    @constraint(m, E_y[i,:] - 1 .<= max_time*E_z[i,:] - 0.000001*(1-E_z[i,:])) # aTx − b ≤ Mz − ε(1−z)\n",
+    "    @constraint(m, E_y[i,:] .>= 0.000001*E_z[i,:])                             # aTx −b ≥ m(1−z) + εz\n",
+    "    @constraint(m, E[i] == sum(1-E_z[i,:]))\n",
     "end\n",
-    "@constraint(m, E_y[i,:] - 1 .<= max_time*E_z[i] - 0.000001*(1-E_z[i])) # aTx − b ≤ Mz − ε(1−z)\n",
-    "@constraint(m, E_y[i] .>= 0.000001*E_z[i])                           # aTx −b ≥ m(1−z) + εz\n",
-    "for i = 1:num_tasks\n",
-    "    @constraint(m, E[i] == sum(1-E_z[i]))\n",
-    "end\n",
+    "\n",
     "\n",
     "# Other constraints\n",
     "for i = 1:num_tasks\n",
@@ -423,8 +415,7 @@
     "\n",
     "@expression(m, Tu_x, sum(F-A)/sum(D))\n",
     "@expression(m, mu, sum(W)/num_tasks)\n",
-    "@expression(m, sigma, sum((W-mu).^2)/num_tasks)\n",
-    "@expression(m, F_x, sigma^2)\n",
+    "@expression(m, F_x, sum((W-mu).^2)/num_tasks)\n",
     "@expression(m, R_x, sum(E))\n",
     "@expression(m, Th_x, sum(Phi))\n",
     "@expression(m, C1_x, sum(Psi))\n",
@@ -432,7 +423,10 @@
     "\n",
     "status = solve(m)\n",
     "println(status)\n",
-    "println(getvalue(x))"
+    "x = getvalue(x)\n",
+    "for i = 1:num_tasks\n",
+    "    println(x[i,:])\n",
+    "end"
    ]
   },
   {
