--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -213,7 +213,7 @@
    "source": [
     "$$\n",
     "\\begin{aligned}\n",
-    "\\underset{x \\in \\mathbb{R^{n×m}}}{\\text{maximize}}\\qquad& Tu(x)+F(x)+R(x)+Th(x)-C_1(x)\\\\\n",
+    "\\underset{x \\in \\mathbb{R^{n×m}}}{\\text{minimize}}\\qquad& Tu(x)+F(x)+R(x)+C_1(x)-Th(x)\\\\\n",
     "\\text{subject to:}\\qquad& \\sum_{j = t_i}^m x_{ij} - s_i \\leq M \\Phi_i - \\epsilon(1-\\Phi_i) \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
     "& \\sum_{j = t_i}^m x_{ij} - s_i \\geq m (1-\\Phi_i)+ \\epsilon \\Phi_i \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
     "& \\sum_{j = 1}^{t_i} x_{ij} = 0 \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
@@ -233,9 +233,10 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\underset{x \\in \\mathbb{R^{n×m×c}}}{\\text{maximize}}\\qquad& T(x)+F(x)+R(x)+Th(x)-C_1(x)-C_2(x) \\\\\n",
+    "\\underset{x \\in \\mathbb{R^{n×m×c}}}{\\text{minimize}}\\qquad& Tu(x)+F(x)+R(x)+C_1(x)+C_2(x)-Th(x) \\\\\n",
     "\\text{subject to:}\\qquad& \\sum_{k = 1}^c \\sum_{j = t_i}^m x_{ijk} - s_i \\leq M \\Phi_i - \\epsilon(1-\\Phi_i) \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
     "& \\sum_{k = 1}^c \\sum_{j = t_i}^m x_{ijk} - s_i \\geq m (1-\\Phi_i)+ \\epsilon \\Phi_i \\qquad \\forall i \\in \\mathcal{N}\\\\\n",
+    "& \\sum_{j = 1}^{t_i} x_{ijk} = 0 \\quad \\forall i \\in \\mathcal{N} \\quad k \\in \\mathcal{C}\\\\\n",
     "& \\sum_{i=1}^n x_{ijk} \\leq 1 \\quad \\forall j \\in \\mathcal{T} \\quad k \\in \\mathcal{C}\\\\\n",
     "& x_{ijk} \\in \\{0,1\\} \\quad \\forall i \\in \\mathcal{N} \\quad j \\in \\mathcal{T} \\quad k \\in \\mathcal{C}\n",
     "\\end{aligned}\n",
@@ -292,8 +293,38 @@
    "source": [
     "### 2.5. Stochastic Programming ###\n",
     "\n",
-    "Use the Certainty Equivalence approach, use the expected value of random variables, i.e. $\\bar{s}, \\bar{t}$. \n",
+    "- Background knowledge for stochastic programming \n",
     "\n",
+    "Stochastic programming is a framework for modeling optimization problems that involve uncertainty. The goal here is to find some policy that is feasible for all (or almost all) the possible data instances and minimizes the expectation of some function of the decisions and the random variables. The basic formulation of stochastic programming is:\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\text{minimize}\\qquad& F_0(x) = \\textbf{E} f_0(x,w) \\\\\n",
+    "\\text{subject to:}\\qquad& F_i(x) = \\textbf{E} f_i(x,w) \\leq 0 \\quad\\forall i \\in I\\\\\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "where $x$ are decision variables and $w$ is parameters subject to some distribution.\n",
+    "\n",
+    "- Chance constraints\n",
+    "\n",
+    "‘chance constraints’ (η is ‘confidence level’):\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\textbf{Prob}(f_i(x,w) \\leq 0 ) \\geq \\eta\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "- Finite Set \n",
+    "\n",
+    "Suppose $w \\in \\{w_1, \\dots,  w_N \\}$ with $\\pi_j = \\textbf{Prob}(w = w_j)$ \n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\text{minimize}\\qquad& F_0(x) = \\sum_j^{N} \\pi_j f_0(x,w_j) \\\\\n",
+    "\\text{subject to:}\\qquad& F_i(x) = \\sum_j^{N} \\pi_j f_i(x,w_j) \\leq 0 \\quad\\forall i \\in I\\\\\n",
+    "\\end{aligned}\n",
+    "$$\n",
     "#### 2.5.1. Unknown Duration ####\n",
     "\n",
     "$$s_i = \\bar{s_i}$$\n",
@@ -318,7 +349,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -430,7 +463,8 @@
     "1. Operating Systems, Wikipedia, refer to https://en.wikipedia.org/wiki/Operating_system\n",
     "2. Time-sharing, Wikipedia, refer to https://en.wikipedia.org/wiki/Time-sharing\n",
     "3. History of CPU process scheduling, refer to http://dave-reed.com/csc539.S05/Lectures/CPUsched.ppt\n",
-    "4. Context Switch, Wikipedia, refer to https://en.wikipedia.org/wiki/Context_switch#Cost"
+    "4. Context Switch, Wikipedia, refer to https://en.wikipedia.org/wiki/Context_switch#Cost\n",
+    "5.  http://web.stanford.edu/class/ee364a/lectures/stoch_prog.pdf"
    ]
   },
   {
