--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -350,20 +350,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mRecompiling stale cache file C:\\Users\\HAORAN\\AppData\\Local\\JuliaPro-0.6.2.1\\pkgs-0.6.2.1\\lib\\v0.6\\Gurobi.ji for module Gurobi.\n",
+      "\u001b[39m"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Academic license - for non-commercial use only\n",
       "Optimal\n",
-      "[-0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -0.0, 0.0, -0.0, 1.0, 0.0, -0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "[-0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1.0, 0.0, 0.0]\n",
-      "[-0.0, -0.0, -0.0, 1.0, -0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0, -0.0, 1.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "[-0.0, -0.0, -0.0, -0.0, -0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, -0.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0]\n",
-      "[-0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, 1.0, 0.0, 0.0, 0.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
+      "[1.0, 0.0, 1.0, -0.0, 1.0, -0.0, 0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, 0.0, -0.0, 0.0, -0.0]\n",
+      "[-0.0, 1.0, -0.0, -0.0, 0.0, -0.0, 0.0, 0.0, 0.0, -0.0, 0.0, 1.0, -0.0, 1.0, -0.0, 1.0, -0.0, 1.0, -0.0, 1.0]\n",
+      "[-0.0, -0.0, -0.0, 1.0, 0.0, 6.66133e-10, 1.0, 0.0, 1.0, 0.0, 1.0, -0.0, -0.0, 0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0]\n",
+      "[-0.0, -0.0, -0.0, -0.0, -0.0, 1.0, 3.33067e-10, -0.0, -0.0, -0.0, -0.0, 0.0, 1.0, -0.0, 1.0, -0.0, 1.0, 0.0, 1.0, 0.0]\n",
+      "[-0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, 1.0, -0.0, 1.0, -0.0, 0.0, -0.0, -0.0, -0.0, 0.0, -0.0, -0.0, -0.0, -0.0]\n",
+      "turnaround: 2.1999999998667734\n",
+      "avg wait time: 8.999999999467095\n",
+      "variance: 20.80000000213164\n",
+      "responsiveness: 3.2000000002007276\n",
+      "throughput: 5.0\n",
+      "cost: -4.440892098500626e-16\n",
+      "0.4832000000760266\n"
      ]
     }
    ],
@@ -408,7 +423,7 @@
     "for i = 1:max_time-1\n",
     "    @constraint(m, Psi_y[:,i] .== x[:,i+1] .+ x[:,i])\n",
     "    @constraint(m, Psi_y[:,i] - 1 .<= max_time*Psi_z[:,i] - 0.000001*(1-Psi_z[:,i])) # aTx − b ≤ Mz − ε(1−z)\n",
-    "    @constraint(m, Psi_y[:,i] .>= 0.000001*Psi_z[:,i])                               # aTx −b ≥ m(1−z) + εz\n",
+    "    @constraint(m, Psi_y[:,i] .>= 0.0001*Psi_z[:,i])                               # aTx −b ≥ m(1−z) + εz\n",
     "    @constraint(m, Psi[i] == 2 - sum(Psi_z[:,i]))\n",
     "end\n",
     "\n",
@@ -423,8 +438,8 @@
     "        @constraint(m, E_y[i, j] == sum(x[i,1:j]))\n",
     "    end\n",
     "    \n",
-    "    @constraint(m, E_y[i,:] - 1 .<= max_time*E_z[i,:] - 0.000001*(1-E_z[i,:])) # aTx − b ≤ Mz − ε(1−z)\n",
-    "    @constraint(m, E_y[i,:] .>= 0.000001*E_z[i,:])                             # aTx −b ≥ m(1−z) + εz\n",
+    "    @constraint(m, E_y[i,:] - 1 .<= max_time*E_z[i,:] - 0.0001*(1-E_z[i,:])) # aTx − b ≤ Mz − ε(1−z)\n",
+    "    @constraint(m, E_y[i,:] .>= 0.0001*E_z[i,:])                             # aTx −b ≥ m(1−z) + εz\n",
     "    @constraint(m, E[i] == sum(1-E_z[i,:]))\n",
     "end\n",
     "\n",
@@ -437,7 +452,7 @@
     "    for j = A[i]:max_time\n",
     "        @constraint(m, F[i] >= j*x[i, j])      # Finish time is the last 1 of each task\n",
     "    end\n",
-    "    @constraint(m, sum(x[i]) == 0)             # Total time quantums occupied by the task should be equal to its length\n",
+    "    @constraint(m, sum(x[i,:]) <= D[i])             # Total time quantums occupied by the task should be equal to its length\n",
     "end\n",
     "\n",
     "for j = 1:max_time\n",
@@ -447,10 +462,10 @@
     "@expression(m, Tu_x, sum(F-A)/sum(D))\n",
     "@expression(m, mu, sum(W)/num_tasks)\n",
     "@expression(m, F_x, sum((W-mu).^2)/num_tasks)\n",
-    "@expression(m, R_x, sum(E))\n",
+    "@expression(m, R_x, sum(E)/num_tasks)\n",
     "@expression(m, Th_x, sum(Phi))\n",
     "@expression(m, C1_x, sum(Psi))\n",
-    "@objective(m, Min, Tu_x + F_x + R_x - Th_x + C1_x )\n",
+    "@objective(m, Min, Tu_x + 0.004*F_x + R_x - Th_x + C1_x )\n",
     "\n",
     "status = solve(m)\n",
     "println(status)\n",
@@ -474,6 +489,25 @@
    },
    "source": [
     "## 4. Results And Discussion ##\n",
+    "\n",
+    "### Visualization ###\n",
+    "\n",
+    "```\n",
+    "tu = getvalue(Tu_x)\n",
+    "mu = getvalue(mu)\n",
+    "fx = getvalue(F_x)\n",
+    "rx = getvalue(R_x)\n",
+    "th = getvalue(Th_x)\n",
+    "C1_x = getvalue(C1_x)\n",
+    "\n",
+    "println(\"turnaround: \", tu)\n",
+    "println(\"avg wait time: \", mu)\n",
+    "println(\"variance: \", fx)\n",
+    "println(\"responsiveness: \", rx)\n",
+    "println(\"throughput: \", th)\n",
+    "println(\"cost: \", C1_x)\n",
+    "println(getobjectivevalue(m))\n",
+    "```\n",
     "\n",
     "### Sensitivity Analsis ###\n",
     "\n",
@@ -511,16 +545,54 @@
     "2. Time-sharing, Wikipedia, refer to https://en.wikipedia.org/wiki/Time-sharing\n",
     "3. History of CPU process scheduling, refer to http://dave-reed.com/csc539.S05/Lectures/CPUsched.ppt\n",
     "4. Context Switch, Wikipedia, refer to https://en.wikipedia.org/wiki/Context_switch#Cost\n",
-    "5.  http://web.stanford.edu/class/ee364a/lectures/stoch_prog.pdf",
+    "5.  http://web.stanford.edu/class/ee364a/lectures/stoch_prog.pdf\n",
     "6. Process scheduling under uncertainty: Review and challenges. Zukui Li, Marianthi Ierapetritou. Science Direct, Computers and Chemical Engineering 32 (2008) 715–727."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mUpdating METADATA...\n",
+      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mUpdating cache of Blosc...\n",
+      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mUpdating cache of StatsBase...\n",
+      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mUpdating cache of NamedTuples...\n",
+      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mUpdating cache of LineSearches...\n",
+      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mUpdating cache of WeakRefStrings...\n",
+      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mUpdating cache of Compat...\n",
+      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mUpdating cache of Gurobi...\n",
+      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mUpdating cache of TextParse...\n",
+      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mUpdating cache of Dagger...\n",
+      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mUpdating cache of NLSolversBase...\n",
+      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mUpdating cache of Interact...\n",
+      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mUpdating cache of PyCall...\n",
+      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mUpdating cache of OnlineStats...\n",
+      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mUpdating cache of Calculus...\n",
+      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mUpdating cache of MathProgBase...\n",
+      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mUpdating cache of Hiccup...\n",
+      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mComputing changes...\n",
+      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mUpgrading Gurobi: v0.3.3 => v0.4.0\n",
+      "\u001b[39m\u001b[1m\u001b[33mWARNING: \u001b[39m\u001b[22m\u001b[33mThe following packages have been updated but were already imported:\n",
+      "- Gurobi\n",
+      "Restart Julia to use the updated versions.\u001b[39m\n",
+      "\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mBuilding Gurobi\n",
+      "\u001b[39m"
+     ]
+    }
+   ],
+   "source": [
+    "Pkg.update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
