--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -350,8 +350,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -359,11 +361,11 @@
      "text": [
       "Academic license - for non-commercial use only\n",
       "Optimal\n",
-      "[-0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -0.0, 0.0, -0.0, 1.0, 0.0, -0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "[-0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1.0, 0.0, 0.0]\n",
-      "[-0.0, -0.0, -0.0, 1.0, -0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0, -0.0, 1.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "[-0.0, -0.0, -0.0, -0.0, -0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, -0.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0]\n",
-      "[-0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, 1.0, 0.0, 0.0, 0.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
+      "[1.0, -0.0, 1.0, -0.0, 1.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0]\n",
+      "[-0.0, 1.0, -0.0, -0.0, -0.0, -0.0, 0.0, -0.0, 0.0, -0.0, 0.0, 1.0, 0.0, 1.0, -0.0, 1.0, -0.0, 1.0, -0.0, 1.0]\n",
+      "[-0.0, -0.0, -0.0, 1.0, -0.0, -0.0, 1.0, -0.0, 1.0, -0.0, 1.0, -0.0, -0.0, -0.0, 0.0, -0.0, 0.0, -0.0, 0.0, -0.0]\n",
+      "[-0.0, -0.0, -0.0, -0.0, -0.0, 1.0, -0.0, -0.0, -0.0, -0.0, -0.0, 0.0, 1.0, -0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0]\n",
+      "[-0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, 1.0, -0.0, 1.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0]\n"
      ]
     }
    ],
@@ -375,9 +377,9 @@
     "D = [3, 6, 4, 5, 2]\n",
     "max_time = 20                 # TO BE SETTLED\n",
     "psi_1 = 0.4\n",
+    "ε = 0.000001\n",
     "\n",
-    "\n",
-    "using JuMP, ConditionalJuMP, Gurobi\n",
+    "using JuMP, Gurobi\n",
     "\n",
     "m = Model(solver=GurobiSolver(OutputFlag=0))\n",
     "\n",
@@ -400,15 +402,15 @@
     "\n",
     "# Expressing Phi\n",
     "for i = 1:num_tasks\n",
-    "    @implies(m, (sum(x[i,:]) >= D[i]) => (Phi[i] == 1))\n",
-    "    @implies(m, (sum(x[i,:]) <= D[i]-1) => (Phi[i] == 0))\n",
+    "    @constraint(m, sum(x[i,:]) - D[i] <= -ε*(1-Phi[i]))                      # aTx − b ≤ Mz − ε(1−z)\n",
+    "    @constraint(m, sum(x[i,:]) - D[i] + 1 >= -maximum(D)*(1-Phi[1])+ ε*Phi[i])      # aTx − b ≥ m(1−z) + εz\n",
     "end\n",
     "\n",
     "# Expressing Psi\n",
     "for i = 1:max_time-1\n",
     "    @constraint(m, Psi_y[:,i] .== x[:,i+1] .+ x[:,i])\n",
-    "    @constraint(m, Psi_y[:,i] - 1 .<= max_time*Psi_z[:,i] - 0.000001*(1-Psi_z[:,i])) # aTx − b ≤ Mz − ε(1−z)\n",
-    "    @constraint(m, Psi_y[:,i] .>= 0.000001*Psi_z[:,i])                               # aTx −b ≥ m(1−z) + εz\n",
+    "    @constraint(m, Psi_y[:,i] - 1 .<= max_time*Psi_z[:,i] - ε*(1-Psi_z[:,i])) # aTx − b ≤ Mz − ε(1−z)\n",
+    "    @constraint(m, Psi_y[:,i] .>= ε*Psi_z[:,i])                               # aTx − b ≥ m(1−z) + εz\n",
     "    @constraint(m, Psi[i] == 2 - sum(Psi_z[:,i]))\n",
     "end\n",
     "\n",
@@ -423,8 +425,8 @@
     "        @constraint(m, E_y[i, j] == sum(x[i,1:j]))\n",
     "    end\n",
     "    \n",
-    "    @constraint(m, E_y[i,:] - 1 .<= max_time*E_z[i,:] - 0.000001*(1-E_z[i,:])) # aTx − b ≤ Mz − ε(1−z)\n",
-    "    @constraint(m, E_y[i,:] .>= 0.000001*E_z[i,:])                             # aTx −b ≥ m(1−z) + εz\n",
+    "    @constraint(m, E_y[i,:] - 1 .<= max_time*E_z[i,:] - ε*(1-E_z[i,:])) # aTx − b ≤ Mz − ε(1−z)\n",
+    "    @constraint(m, E_y[i,:] .>= ε*E_z[i,:])                             # aTx −b ≥ m(1−z) + εz\n",
     "    @constraint(m, E[i] == sum(1-E_z[i,:]))\n",
     "end\n",
     "\n",
@@ -437,7 +439,7 @@
     "    for j = A[i]:max_time\n",
     "        @constraint(m, F[i] >= j*x[i, j])      # Finish time is the last 1 of each task\n",
     "    end\n",
-    "    @constraint(m, sum(x[i]) == 0)             # Total time quantums occupied by the task should be equal to its length\n",
+    "    @constraint(m, sum(x[i,:]) <= D[i])             # Total time quantums occupied by the task should be equal to its length\n",
     "end\n",
     "\n",
     "for j = 1:max_time\n",
@@ -447,16 +449,74 @@
     "@expression(m, Tu_x, sum(F-A)/sum(D))\n",
     "@expression(m, mu, sum(W)/num_tasks)\n",
     "@expression(m, F_x, sum((W-mu).^2)/num_tasks)\n",
-    "@expression(m, R_x, sum(E))\n",
+    "@expression(m, R_x, sum(E)/num_tasks)\n",
     "@expression(m, Th_x, sum(Phi))\n",
     "@expression(m, C1_x, sum(Psi))\n",
-    "@objective(m, Min, Tu_x + F_x + R_x - Th_x + C1_x )\n",
+    "@objective(m, Min, Tu_x + 0.004*F_x + R_x - Th_x + C1_x )\n",
     "\n",
     "status = solve(m)\n",
     "println(status)\n",
     "x = getvalue(x)\n",
     "for i = 1:num_tasks\n",
     "    println(x[i,:])\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2\n",
+      "9.0\n",
+      "20.80000000000001\n",
+      "3.2\n",
+      "5.0\n",
+      "-4.440892098500626e-16\n",
+      "[1.0, 1.0, 1.0, 1.0, 1.0]\n",
+      "0.4832000000000003\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(getvalue(Tu_x))\n",
+    "println(getvalue(mu))\n",
+    "println(getvalue(F_x))\n",
+    "println(getvalue(R_x))\n",
+    "println(getvalue(Th_x))\n",
+    "println(getvalue(C1_x))\n",
+    "println(getvalue(Phi))\n",
+    "println(getobjectivevalue(m))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "6.0\n",
+      "4.0\n",
+      "5.0\n",
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i = 1:num_tasks\n",
+    "    println(sum(x[i,:]))\n",
     "end"
    ]
   },
@@ -511,8 +571,7 @@
     "2. Time-sharing, Wikipedia, refer to https://en.wikipedia.org/wiki/Time-sharing\n",
     "3. History of CPU process scheduling, refer to http://dave-reed.com/csc539.S05/Lectures/CPUsched.ppt\n",
     "4. Context Switch, Wikipedia, refer to https://en.wikipedia.org/wiki/Context_switch#Cost\n",
-    "5.  http://web.stanford.edu/class/ee364a/lectures/stoch_prog.pdf",
-    "6. Process scheduling under uncertainty: Review and challenges. Zukui Li, Marianthi Ierapetritou. Science Direct, Computers and Chemical Engineering 32 (2008) 715–727."
+    "5.  http://web.stanford.edu/class/ee364a/lectures/stoch_prog.pdf6. Process scheduling under uncertainty: Review and challenges. Zukui Li, Marianthi Ierapetritou. Science Direct, Computers and Chemical Engineering 32 (2008) 715–727."
    ]
   },
   {
