--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -350,50 +350,22 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-=======
-   "execution_count": 1,
-   "metadata": {},
->>>>>>> 9749b3d019e0fa4f76f7adb080fc47e7dfe3d123
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mRecompiling stale cache file C:\\Users\\HAORAN\\AppData\\Local\\JuliaPro-0.6.2.1\\pkgs-0.6.2.1\\lib\\v0.6\\Gurobi.ji for module Gurobi.\n",
-      "\u001b[39m"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Academic license - for non-commercial use only\n",
       "Optimal\n",
-<<<<<<< HEAD
-      "[1.0, -0.0, 1.0, -0.0, 1.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0]\n",
-      "[-0.0, 1.0, -0.0, -0.0, -0.0, -0.0, 0.0, -0.0, 0.0, -0.0, 0.0, 1.0, 0.0, 1.0, -0.0, 1.0, -0.0, 1.0, -0.0, 1.0]\n",
-      "[-0.0, -0.0, -0.0, 1.0, -0.0, -0.0, 1.0, -0.0, 1.0, -0.0, 1.0, -0.0, -0.0, -0.0, 0.0, -0.0, 0.0, -0.0, 0.0, -0.0]\n",
-      "[-0.0, -0.0, -0.0, -0.0, -0.0, 1.0, -0.0, -0.0, -0.0, -0.0, -0.0, 0.0, 1.0, -0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0]\n",
-      "[-0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, 1.0, -0.0, 1.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0]\n"
-=======
-      "[1.0, 0.0, 1.0, -0.0, 1.0, -0.0, 0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, 0.0, -0.0, 0.0, -0.0]\n",
-      "[-0.0, 1.0, -0.0, -0.0, 0.0, -0.0, 0.0, 0.0, 0.0, -0.0, 0.0, 1.0, -0.0, 1.0, -0.0, 1.0, -0.0, 1.0, -0.0, 1.0]\n",
-      "[-0.0, -0.0, -0.0, 1.0, 0.0, 6.66133e-10, 1.0, 0.0, 1.0, 0.0, 1.0, -0.0, -0.0, 0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0]\n",
-      "[-0.0, -0.0, -0.0, -0.0, -0.0, 1.0, 3.33067e-10, -0.0, -0.0, -0.0, -0.0, 0.0, 1.0, -0.0, 1.0, -0.0, 1.0, 0.0, 1.0, 0.0]\n",
-      "[-0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, 1.0, -0.0, 1.0, -0.0, 0.0, -0.0, -0.0, -0.0, 0.0, -0.0, -0.0, -0.0, -0.0]\n",
-      "turnaround: 2.1999999998667734\n",
-      "avg wait time: 8.999999999467095\n",
-      "variance: 20.80000000213164\n",
-      "responsiveness: 3.2000000002007276\n",
-      "throughput: 5.0\n",
-      "cost: -4.440892098500626e-16\n",
-      "0.4832000000760266\n"
->>>>>>> 9749b3d019e0fa4f76f7adb080fc47e7dfe3d123
+      "[1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -0.0, 0.0]\n",
+      "[-0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 1.0, -0.0, 1.0, 0.0, 1.0, 0.0, 1.0]\n",
+      "[-0.0, -0.0, -0.0, 1.0, -0.0, 0.0, 1.0, 0.0, 1.0, -0.0, 1.0, -0.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "[-0.0, -0.0, -0.0, -0.0, -0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, -0.0, -0.0, 1.0, 0.0, 1.0, 0.0, 1.0, -0.0]\n",
+      "[-0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, 1.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, -0.0, 0.0, 0.0, -0.0, 0.0]\n"
      ]
     }
    ],
@@ -437,13 +409,8 @@
     "# Expressing Psi\n",
     "for i = 1:max_time-1\n",
     "    @constraint(m, Psi_y[:,i] .== x[:,i+1] .+ x[:,i])\n",
-<<<<<<< HEAD
     "    @constraint(m, Psi_y[:,i] - 1 .<= max_time*Psi_z[:,i] - ε*(1-Psi_z[:,i])) # aTx − b ≤ Mz − ε(1−z)\n",
     "    @constraint(m, Psi_y[:,i] .>= ε*Psi_z[:,i])                               # aTx − b ≥ m(1−z) + εz\n",
-=======
-    "    @constraint(m, Psi_y[:,i] - 1 .<= max_time*Psi_z[:,i] - 0.000001*(1-Psi_z[:,i])) # aTx − b ≤ Mz − ε(1−z)\n",
-    "    @constraint(m, Psi_y[:,i] .>= 0.0001*Psi_z[:,i])                               # aTx −b ≥ m(1−z) + εz\n",
->>>>>>> 9749b3d019e0fa4f76f7adb080fc47e7dfe3d123
     "    @constraint(m, Psi[i] == 2 - sum(Psi_z[:,i]))\n",
     "end\n",
     "\n",
@@ -458,13 +425,8 @@
     "        @constraint(m, E_y[i, j] == sum(x[i,1:j]))\n",
     "    end\n",
     "    \n",
-<<<<<<< HEAD
     "    @constraint(m, E_y[i,:] - 1 .<= max_time*E_z[i,:] - ε*(1-E_z[i,:])) # aTx − b ≤ Mz − ε(1−z)\n",
     "    @constraint(m, E_y[i,:] .>= ε*E_z[i,:])                             # aTx −b ≥ m(1−z) + εz\n",
-=======
-    "    @constraint(m, E_y[i,:] - 1 .<= max_time*E_z[i,:] - 0.0001*(1-E_z[i,:])) # aTx − b ≤ Mz − ε(1−z)\n",
-    "    @constraint(m, E_y[i,:] .>= 0.0001*E_z[i,:])                             # aTx −b ≥ m(1−z) + εz\n",
->>>>>>> 9749b3d019e0fa4f76f7adb080fc47e7dfe3d123
     "    @constraint(m, E[i] == sum(1-E_z[i,:]))\n",
     "end\n",
     "\n",
@@ -490,7 +452,7 @@
     "@expression(m, R_x, sum(E)/num_tasks)\n",
     "@expression(m, Th_x, sum(Phi))\n",
     "@expression(m, C1_x, sum(Psi))\n",
-    "@objective(m, Min, Tu_x + 0.004*F_x + R_x - Th_x + C1_x )\n",
+    "@objective(m, Min, Tu_x + 0.0004*F_x + R_x - Th_x + C1_x )\n",
     "\n",
     "status = solve(m)\n",
     "println(status)\n",
@@ -502,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -518,7 +480,7 @@
       "5.0\n",
       "-4.440892098500626e-16\n",
       "[1.0, 1.0, 1.0, 1.0, 1.0]\n",
-      "0.4832000000000003\n"
+      "0.4083200000000009\n"
      ]
     }
    ],
@@ -535,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -628,18 +590,16 @@
     "2. Time-sharing, Wikipedia, refer to https://en.wikipedia.org/wiki/Time-sharing\n",
     "3. History of CPU process scheduling, refer to http://dave-reed.com/csc539.S05/Lectures/CPUsched.ppt\n",
     "4. Context Switch, Wikipedia, refer to https://en.wikipedia.org/wiki/Context_switch#Cost\n",
-<<<<<<< HEAD
-    "5.  http://web.stanford.edu/class/ee364a/lectures/stoch_prog.pdf6. Process scheduling under uncertainty: Review and challenges. Zukui Li, Marianthi Ierapetritou. Science Direct, Computers and Chemical Engineering 32 (2008) 715–727."
-=======
     "5.  http://web.stanford.edu/class/ee364a/lectures/stoch_prog.pdf\n",
     "6. Process scheduling under uncertainty: Review and challenges. Zukui Li, Marianthi Ierapetritou. Science Direct, Computers and Chemical Engineering 32 (2008) 715–727."
->>>>>>> 9749b3d019e0fa4f76f7adb080fc47e7dfe3d123
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -679,7 +639,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
