--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -343,7 +343,9 @@
    "source": [
     "## 3. Solution ##\n",
     "\n",
-    "### 3.1 Perfect Knowledge"
+    "### 3.1 Perfect Knowledge\n",
+    "\n",
+    "#### 3.1.1 Single Core ####"
    ]
   },
   {
@@ -601,6 +603,171 @@
     "subplot(\"224\")\n",
     "title(\"Turnaround Time\")\n",
     "bar(processes, turnaround_time, color=\"sandybrown\", align=\"center\", alpha=0.4);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.1.2 Multi-Core"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0001"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define input data\n",
+    "\n",
+    "num_tasks = 5\n",
+    "A = [1, 2, 4, 6, 8]\n",
+    "D = [3, 6, 4, 5, 2]\n",
+    "max_time = minimum(A) + sum(D) + 2\n",
+    "c = 2\n",
+    "\n",
+    "psi_1 = 0.4\n",
+    "psi_2 = 0.7\n",
+    "ε = 0.0001"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Academic license - for non-commercial use only\n",
+      "Optimal\n",
+      "[1.0 -0.0; 1.0 -0.0; 1.0 -0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0]\n",
+      "[-0.0 -0.0; -0.0 1.0; -0.0 1.0; -0.0 1.0; -0.0 1.0; -0.0 1.0; -0.0 1.0; -0.0 -0.0; 0.0 -0.0; 0.0 -0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0]\n",
+      "[-0.0 -0.0; -0.0 -0.0; -0.0 -0.0; 1.0 -0.0; 1.0 -0.0; 1.0 0.0; 1.0 0.0; -0.0 0.0; 0.0 0.0; 0.0 -0.0; 0.0 -0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0]\n",
+      "[-0.0 -0.0; -0.0 -0.0; -0.0 -0.0; -0.0 -0.0; -0.0 -0.0; -0.0 -0.0; -0.0 -0.0; -0.0 1.0; 0.0 1.0; 0.0 1.0; 0.0 1.0; 0.0 1.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 0.0; 0.0 -0.0; 0.0 -0.0; 0.0 -0.0; 0.0 -0.0; 0.0 -0.0; 0.0 -0.0; 0.0 0.0]\n",
+      "[-0.0 -0.0; -0.0 -0.0; -0.0 -0.0; -0.0 -0.0; -0.0 -0.0; -0.0 -0.0; -0.0 -0.0; 1.0 0.0; 1.0 0.0; -0.0 0.0; -0.0 0.0; -0.0 0.0; -0.0 0.0; -0.0 0.0; -0.0 0.0; -0.0 0.0; -0.0 0.0; -0.0 0.0; -0.0 0.0; -0.0 0.0; -0.0 0.0; -0.0 0.0; -0.0 0.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "using JuMP, Gurobi\n",
+    "\n",
+    "m = Model(solver=GurobiSolver(OutputFlag=0))\n",
+    "\n",
+    "@variable(m, x[1:num_tasks, 1:max_time, 1:c], Bin)  # x[i, j, k] == 1 <=> task i gets executed at time j by core k\n",
+    "\n",
+    "@variable(m, F[1:num_tasks] >= 1, Int) # Finish time of each task\n",
+    "\n",
+    "@variable(m, W[1:num_tasks] >= 0, Int) # Waiting time of each task\n",
+    "\n",
+    "@variable(m, 1 <= E[1:num_tasks] <= max_time, Int) # Start time of each task\n",
+    "@variable(m, E_y[1:num_tasks, 1:max_time] >= 0, Int) # Assistant variable of start time\n",
+    "@variable(m, E_z[1:num_tasks, 1:max_time], Bin)      # Assistant variable of start time\n",
+    "@variable(m, E_x[1:num_tasks, 1:max_time], Bin)      # Assistant variable of start time\n",
+    "\n",
+    "@variable(m, Psi_y[1:num_tasks, 1:max_time-1, 1:c], Int) # Assistant variable for context switch\n",
+    "@variable(m, Psi[1:num_tasks, 1:max_time-1, 1:c], Bin) # Psi[i,k] == 1 <=> there is context switch between time i and i+1 at core k\n",
+    "\n",
+    "@variable(m, Phi_x[1:num_tasks, 1:c] >= 0, Int)\n",
+    "@variable(m, Phi_y[1:num_tasks, 1:c], Bin)\n",
+    "\n",
+    "# General constraints\n",
+    "for i = 1:num_tasks\n",
+    "    for k = 1:c\n",
+    "        for j = 1:(A[i]-1)\n",
+    "            @constraint(m, x[i,j,k] == 0)            # A task should not be worked on before it arrives\n",
+    "        end\n",
+    "        for j = A[i]:max_time\n",
+    "            @constraint(m, F[i] >= j*x[i,j,k] + 1)      # Finish time is the last 1 of each task\n",
+    "        end\n",
+    "    end\n",
+    "    @constraint(m, sum(x[i,:,:]) == D[i])             # Total time quantums occupied by the task should be equal to its length\n",
+    "end\n",
+    "\n",
+    "for j = 1:max_time\n",
+    "    for k = 1:c\n",
+    "        @constraint(m, sum(x[:,j,k]) <= 1)   # Each time quantum should be occupied by at most 1 task\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "for i = 1:num_tasks\n",
+    "    for j = 1:max_time\n",
+    "        @constraint(m, sum(x[i,j,:]) <= 1)           # Each task can only be executed by at most one core at each time unit\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "# Expressing W\n",
+    "for i = 1:num_tasks\n",
+    "    @constraint(m, W[i] == F[i] - D[i] - A[i]) # Waiting time is the number of zero time slots\n",
+    "end\n",
+    "\n",
+    "# Expressing E\n",
+    "for i = 1:num_tasks\n",
+    "    for j = 1:max_time\n",
+    "        @constraint(m, sum(x[i,j,k] for k in 1:c) == E_x[i,j])\n",
+    "    end\n",
+    "end\n",
+    "for i = 1:num_tasks \n",
+    "    for j = 1:max_time\n",
+    "        @constraint(m, E_y[i, j] == sum(E_x[i,1:j]))\n",
+    "    end\n",
+    "    \n",
+    "    @constraint(m, E_y[i,:] - 1 .<= max_time*E_z[i,:] - ε*(1-E_z[i,:])) # aTx − b ≤ Mz − ε(1−z)\n",
+    "    @constraint(m, E_y[i,:] .>= ε*E_z[i,:])                             # aTx −b ≥ m(1−z) + εz\n",
+    "    @constraint(m, E[i] == sum(1-E_z[i,:])+1)\n",
+    "end\n",
+    "\n",
+    "\n",
+    "# Expressing Psi\n",
+    "for k = 1:c\n",
+    "    for i = 1:max_time-1\n",
+    "        @constraint(m, Psi_y[:,i,k] .== x[:,i+1,k] .- x[:,i,k])\n",
+    "        for j = 1:num_tasks\n",
+    "            @constraint(m, Psi[j,i,k] >= Psi_y[j,i,k])\n",
+    "        end\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "# Expressing Phi\n",
+    "for i = 1:num_tasks\n",
+    "    for k = 1:c\n",
+    "        @constraint(m, Phi_x[i,k] == sum(x[i,:,k]))\n",
+    "        @constraint(m, Phi_x[i,k]-1 <= D[i]*Phi_y[i,k]-ε*(1-Phi_y[i,k]))\n",
+    "        @constraint(m, Phi_x[i,k] >= ε*Phi_y[i,k])\n",
+    "    end\n",
+    "end\n",
+    "        \n",
+    "@expression(m, Tu_x, sum(F-A)/sum(D))\n",
+    "@expression(m, mu, sum(W)/num_tasks)\n",
+    "@expression(m, F_x, sum((W-mu).^2)/num_tasks)\n",
+    "@expression(m, R_x, sum(E-A)/num_tasks)\n",
+    "@expression(m, C1_x, psi_1*sum(Psi))\n",
+    "@expression(m, C2_x, psi_2*(sum(Phi_y)-num_tasks))\n",
+    "@objective(m, Min, Tu_x + F_x + R_x + C1_x + C2_x)\n",
+    "\n",
+    "status = solve(m)\n",
+    "println(status)\n",
+    "x = getvalue(x)\n",
+    "for i = 1:num_tasks\n",
+    "    println(x[i,:,:])\n",
+    "end"
    ]
   },
   {
