Sensitivity analysis done

--- a/course_project.ipynb
+++ b/course_project.ipynb
@@ -1688,7 +1688,7 @@
     "\n",
     "With more responsiveness (smaller $R(x)$), we can observe larger average turnaround time $Tu(x)$. This is mainly because, in order to respond to new tasks, the current one has to be postponed, which eventually result in a larger turnaround time.\n",
     "\n",
-    "In terms of context switch cost, it does not show apparent relations with any other components of the objective. This is no surprise because context switch cost is not part of the $x$ matrix, thus has no impact on other components that depend on the $x$ matrix. "
+    "In terms of context switch cost, it does not show apparent relations with any other components of the objective. This is no surprise because context switch cost is not modeled as part of the $x$ matrix, hence has no impact on other components that depend on the $x$ matrix. "
    ]
   },
   {
